# desk

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
apps/engine/: Cargo.toml  Dockerfile
apps/engine/src/: channels.rs  client.rs  config.rs  indicators.rs  main.rs  plan_monitor.rs  risk.rs  risk_guard.rs  strategy_eval.rs  strategy_runner.rs  trader_client.rs  trader_runner.rs  trader_types.rs  types.rs  worker.rs
apps/openapi/: Cargo.toml  Dockerfile
apps/openapi/src/: agent_chat.rs  channels.rs  chat_commands.rs  data_sources.rs  helpers.rs  main.rs  paper.rs  secrets.rs  strategy_execution.rs  strategy_risk.rs  strategy_trading.rs  trader_chat.rs  traders.rs
apps/scrapper/: Cargo.toml  Dockerfile
apps/scrapper/src/: config.rs  db.rs  main.rs  python_runtime.rs  sources.rs  types.rs  worker.rs
apps/test_bench/: Cargo.toml
apps/test_bench/src/: main.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: channels.rs  chat_commands.rs  data_sources.rs  engine.rs  lib.rs  paper.rs  portfolio.rs  projects.rs  raw.rs  trader.rs  trading.rs
crates/openapi/: Cargo.toml
crates/stock_data/: Cargo.toml
crates/stock_data/src/: lib.rs
crates/test_bench/: Cargo.toml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  OVERVIEW.md
frontend/: Dockerfile  Dockerfile.dev  README.md  package-lock.json  package.json  vite.config.ts
frontend/app/: app.css  root.tsx  routes.ts
frontend/app/components/: AppFeedback.tsx  ChatPanel.tsx  LeftSidebar.tsx  SignedValue.tsx  Topbar.tsx
frontend/app/homepage/: homepage.tsx
frontend/app/hooks/: query-keys.ts  useEngineStatus.ts  usePaperAccountSummary.ts  usePaperAccounts.ts  usePortfolioAccounts.ts  useProjects.ts  useStrategyRiskConfig.ts  useStrategyTradingConfig.ts
frontend/app/lib/: api.ts  chat.ts  openai.ts  paper-summary.ts  stable-compare.ts  theme.ts  ui-state.ts
frontend/app/routes/: channels-index.tsx  channels.tsx  data-sources.tsx  home.tsx  market-index.tsx  market-symbol.tsx  market.tsx  projects-detail.tsx  projects-index.tsx  projects-stage.tsx  projects.tsx  traders-detail.tsx  traders.tsx
frontend/app/state/: AppStateProvider.tsx  app-state.ts  query-client.ts  storage.ts  useAppState.ts
