[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cache = { path = "../../crates/cache" }
chrono = "0.4.44"
models = { path = "../../crates/models" }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
urlencoding = "2.1.3"
