[package]
name = "openapi"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = "3"
poem-openapi = { version = "5", features = ["swagger-ui"]}
tokio = { version = "1", features = ["full"] }

cache = { path = "../../crates/cache" }
models = { path = "../../crates/models" }
database = { path = "../../crates/database" }
stock_data = { path = "../../crates/stock_data" }

env_logger = "0.11.10"
log = "0.4.29"
serde_json = "1.0.149"
