[package]
name = "scrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.44"
models = { path = "../../crates/models" }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10.9"
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v7"] }
