[package]
name = "cache"
version = "0.1.0"
edition = "2024"

[dependencies]
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

models = { path = "../models" }
stock_data = { path = "../stock_data" }
datetime = "0.5.2"
chrono = "0.4.44"
env_logger = "0.11.10"
log = "0.4.29"
arc-swap = "1.9.1"
tokio = { version = "1.52.1", features = ["full"] }
