[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
models = { path = "../models" }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.18.1", features = ["v7"] }
